Fix wide content on mobile devices
Things like embedded iframes and long links were creating extra
whitespace on the right hand side of the page, especially on mobile
devices. Now, they will either shrink or wrap to the next line as
appropriate.

--- a/css/main.css
+++ b/css/main.css
@@ -149,6 +149,7 @@ main,
   margin: 0 auto;
   max-width: 800px;
   padding: 0 24px;
+  word-wrap: break-word;
 }
 
 .next-meeting {
@@ -218,6 +219,10 @@ main,
 footer {
   padding: 1em;
   text-align: center;
+}
+
+iframe {
+  max-width: 100%;
 }
 
 /* ==========================================================================
